unpackaged/main/default/objects/Knowledge__kav/fields/Article_Owner__c.field-meta.xml
<CustomField>
    <fullName>Article_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field to record the creator and owner of a Knowledge article</description>
    <inlineHelpText>The Article Owner is the author of an article and will be responsible for managing article reviews and feedback.</inlineHelpText>
    <label>Article Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Knowledge</relationshipName>
    <type>Lookup</type>
</CustomField>