unpackaged/main/default/objects/Knowledge__kav/fields/Assigned_To_Me__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_Me__c</fullName>
    <formula>LEN( AssignedToId ) &gt; 0 &amp;&amp; AssignedToId =  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned To Me</label>
    <type>Checkbox</type>
</CustomField>