unpackaged/main/default/objects/Knowledge__kav/fields/AT_AS_Inf_ASDetails__c.field-meta.xml
<CustomField>
    <fullName>AT_AS_Inf_ASDetails__c</fullName>
    <label>Alternative Solution</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>