unpackaged/main/default/objects/Knowledge__kav/fields/AT_AS_Inf_Cause__c.field-meta.xml
<CustomField>
    <fullName>AT_AS_Inf_Cause__c</fullName>
    <label>Cause</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>