unpackaged/main/default/objects/Knowledge__kav/fields/AT_AS_Inf_Issue__c.field-meta.xml
<CustomField>
    <fullName>AT_AS_Inf_Issue__c</fullName>
    <label>Issue</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>