unpackaged/main/default/objects/Knowledge__kav/fields/AT_AS_Int_Comment__c.field-meta.xml
<CustomField>
    <fullName>AT_AS_Int_Comment__c</fullName>
    <label>Comment</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>