unpackaged/main/default/objects/Knowledge__kav/fields/AT_AS_Rel_Applies_From__c.field-meta.xml
<CustomField>
    <fullName>AT_AS_Rel_Applies_From__c</fullName>
    <label>Applies From Release</label>
    <length>12</length>
    <type>Text</type>
</CustomField>