unpackaged/main/default/objects/Knowledge__kav/fields/AT_AS_Rel_Applies_From_PkgApp__c.field-meta.xml
<CustomField>
    <fullName>AT_AS_Rel_Applies_From_PkgApp__c</fullName>
    <label>Applies From Package/App</label>
    <length>255</length>
    <type>Text</type>
</CustomField>