unpackaged/main/default/objects/Knowledge__kav/fields/AT_AS_Rel_Resolved_In__c.field-meta.xml
<CustomField>
    <fullName>AT_AS_Rel_Resolved_In__c</fullName>
    <label>Resolved In Release</label>
    <length>12</length>
    <type>Text</type>
</CustomField>