unpackaged/main/default/objects/Knowledge__kav/fields/AT_AS_Rel_Resolved_In_PkgApp__c.field-meta.xml
<CustomField>
    <fullName>AT_AS_Rel_Resolved_In_PkgApp__c</fullName>
    <label>Resolved in Package/App</label>
    <length>255</length>
    <type>Text</type>
</CustomField>