unpackaged/main/default/objects/Knowledge__kav/fields/AT_Com_Details__c.field-meta.xml
<CustomField>
    <fullName>AT_Com_Details__c</fullName>
    <label>Details</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>