unpackaged/main/default/objects/Knowledge__kav/fields/AT_Com_Int_Comment__c.field-meta.xml
<CustomField>
    <fullName>AT_Com_Int_Comment__c</fullName>
    <description>Internal Comment</description>
    <inlineHelpText>Enter further information for Internal use only</inlineHelpText>
    <label>Comment</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>