unpackaged/main/default/objects/Knowledge__kav/fields/AT_GI_Rel_Applies_To__c.field-meta.xml
<CustomField>
    <fullName>AT_GI_Rel_Applies_To__c</fullName>
    <label>Applies To Release</label>
    <length>12</length>
    <type>Text</type>
</CustomField>