unpackaged/main/default/objects/Knowledge__kav/fields/AT_GI_Rel_Applies_To_PkgApp__c.field-meta.xml
<CustomField>
    <fullName>AT_GI_Rel_Applies_To_PkgApp__c</fullName>
    <label>Applies To Package/App</label>
    <length>255</length>
    <type>Text</type>
</CustomField>