unpackaged/main/default/objects/Knowledge__kav/fields/Attachment_2__c.field-meta.xml
<CustomField>
    <fullName>Attachment_2__c</fullName>
    <formula>HYPERLINK( Attachment_2_URL__c ,  Attachment_2_Text__c, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attachment 2</label>
    <type>Text</type>
</CustomField>