unpackaged/main/default/objects/Knowledge__kav/fields/Attachment_2_URL__c.field-meta.xml
<CustomField>
    <fullName>Attachment_2_URL__c</fullName>
    <label>Attachment 2 URL</label>
    <type>Url</type>
</CustomField>