unpackaged/main/default/objects/Knowledge__kav/fields/Attachment__c.field-meta.xml
<CustomField>
    <fullName>Attachment__c</fullName>
    <formula>HYPERLINK( Attachment_URL__c ,  Attachment_Text__c , &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attachment</label>
    <type>Text</type>
</CustomField>