unpackaged/main/default/objects/Knowledge__kav/fields/Attachment_Text__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Text__c</fullName>
    <label>Attachment Text</label>
    <length>80</length>
    <type>Text</type>
</CustomField>