unpackaged/main/default/objects/Knowledge__kav/fields/Attachment_URL__c.field-meta.xml
<CustomField>
    <fullName>Attachment_URL__c</fullName>
    <label>Attachment URL</label>
    <type>Url</type>
</CustomField>