unpackaged/main/default/objects/Knowledge__kav/fields/Further_Details__c.field-meta.xml
<CustomField>
    <fullName>Further_Details__c</fullName>
    <description>Add further information of a Knowledge article in this field.</description>
    <label>Further Details</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>