unpackaged/main/default/objects/Knowledge__kav/fields/Last_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Last_Reviewed__c</fullName>
    <description>Field to record when a Knowledge Article has been reviewed.</description>
    <label>Last Reviewed</label>
    <type>Date</type>
</CustomField>