unpackaged/main/default/objects/Knowledge__kav/fields/Original_Article_Number__c.field-meta.xml
<CustomField>
    <fullName>Original_Article_Number__c</fullName>
    <label>Original Article Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>