unpackaged/main/default/objects/Knowledge__kav/fields/Original_Article_Type__c.field-meta.xml
<CustomField>
    <fullName>Original_Article_Type__c</fullName>
    <label>Original Article Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>