unpackaged/main/default/objects/Knowledge__kav/fields/Original_Created_By__c.field-meta.xml
<CustomField>
    <fullName>Original_Created_By__c</fullName>
    <label>Original Created By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>