unpackaged/main/default/objects/Knowledge__kav/fields/Original_First_Published_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_First_Published_Date__c</fullName>
    <label>Original First Published Date</label>
    <type>DateTime</type>
</CustomField>