unpackaged/main/default/objects/Knowledge__kav/fields/Original_Knowledge_Article_ID__c.field-meta.xml
<CustomField>
    <fullName>Original_Knowledge_Article_ID__c</fullName>
    <label>Original Knowledge Article ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>