unpackaged/main/default/objects/Knowledge__kav/fields/Original_Last_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>Original_Last_Modified_By__c</fullName>
    <label>Original Last Modified By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>