unpackaged/main/default/objects/Knowledge__kav/fields/Original_Last_Published_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Last_Published_Date__c</fullName>
    <label>Original Last Published Date</label>
    <type>DateTime</type>
</CustomField>