unpackaged/main/default/objects/Knowledge__kav/fields/Original_Owner__c.field-meta.xml
<CustomField>
    <fullName>Original_Owner__c</fullName>
    <label>Original Owner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>