unpackaged/main/default/objects/Knowledge__kav/fields/Original_Vote_Score__c.field-meta.xml
<CustomField>
    <fullName>Original_Vote_Score__c</fullName>
    <label>Original Vote Score</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>