unpackaged/main/default/objects/Knowledge__kav/recordTypes/Alternative_Solution.recordType-meta.xml
<RecordType>
    <fullName>Alternative_Solution</fullName>
    <active>true</active>
    <label>Alternative Solution</label>
</RecordType>