unpackaged/main/default/objects/Knowledge__kav/recordTypes/General_Information.recordType-meta.xml
<RecordType>
    <fullName>General_Information</fullName>
    <active>true</active>
    <label>General Information</label>
</RecordType>