unpackaged/main/default/objects/Knowledge__kav/recordTypes/Internal_and_Troubleshooting.recordType-meta.xml
<RecordType>
    <fullName>Internal_and_Troubleshooting</fullName>
    <active>true</active>
    <label>Internal &amp; Troubleshooting</label>
</RecordType>