unpackaged/main/default/objects/Knowledge__kav/listViews/Draft_Articles_Assigned_To_Me.listView-meta.xml
<ListView>
    <fullName>Draft_Articles_Assigned_To_Me</fullName>
    <columns>TITLE</columns>
    <columns>URL_NAME</columns>
    <columns>ABSTRACT</columns>
    <columns>ARTICLE_NUMBER</columns>
    <columns>LANGUAGE</columns>
    <columns>ASSIGNEDTO_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>LANGUAGE</field>
        <operation>equals</operation>
        <value>en_US</value>
    </filters>
    <filters>
        <field>Assigned_To_Me__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Draft Articles Assigned To Me</label>
</ListView>