unpackaged/main/default/objects/Knowledge__kav/listViews/Human_Resource_Payroll_Articles.listView-meta.xml
<ListView>
    <fullName>Human_Resource_Payroll_Articles</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>ABSTRACT</columns>
    <columns>IS_CHANNEL_CSP</columns>
    <columns>IS_CHANNEL_PRM</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Topics</field>
        <operation>includes</operation>
        <value>Human Resource &amp; Payroll</value>
    </filters>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <label>Human Resource &amp; Payroll Articles</label>
    <sharedTo>
        <role>Support_Consultant</role>
        <role>Support_Group_Manager</role>
        <role>Support_Lead</role>
        <role>System_Administrator</role>
    </sharedTo>
</ListView>