unpackaged/main/default/objects/Knowledge__kav/listViews/Internal_Troubleshooting_Guides.listView-meta.xml
<ListView>
    <fullName>Internal_Troubleshooting_Guides</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LANGUAGE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Knowledge__kav.Internal_and_Troubleshooting</value>
    </filters>
    <label>Internal &amp; Troubleshooting Guides</label>
    <sharedTo>
        <role>Support_Consultant</role>
        <role>Support_Group_Manager</role>
        <role>Support_Lead</role>
        <role>System_Administrator</role>
    </sharedTo>
</ListView>