unpackaged/main/default/objects/Knowledge__kav/listViews/Published_Articles_visible_to_public.listView-meta.xml
<ListView>
    <fullName>Published_Articles_visible_to_public</fullName>
    <columns>TITLE</columns>
    <columns>ABSTRACT</columns>
    <columns>ARTICLE_TOTAL_VIEW_COUNT</columns>
    <columns>ARTICLE_CASE_ATTACH_COUNT</columns>
    <columns>ARTICLE_NUMBER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <columns>IS_CHANNEL_APP</columns>
    <columns>IS_CHANNEL_PKB</columns>
    <columns>IS_CHANNEL_CSP</columns>
    <columns>IS_CHANNEL_PRM</columns>
    <columns>RECORDTYPE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <filters>
        <field>LANGUAGE</field>
        <operation>equals</operation>
        <value>en_US</value>
    </filters>
    <filters>
        <field>IS_CHANNEL_PKB</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Published Articles - visible to public</label>
</ListView>