unpackaged/main/default/objects/Knowledge__kav/listViews/Recently_Published_Articles.listView-meta.xml
<ListView>
    <fullName>Recently_Published_Articles</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_PUBLISHED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <filters>
        <field>IS_CHANNEL_CSP</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Recently Published Articles</label>
</ListView>